change travis yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,10 @@ after_success:
   - docker build -t ctnkyrd/multi-nginx ./nginx
   - docker build -t ctnkyrd/multi-server ./server
   - docker build -t ctnkyrd/multi-worker ./worker
-  #Log in to the docker CLI
-  
-  #take those images and push them to docker-hub
+  # Log in to the docker CLI
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+  # Take those images and push them to docker-hub
+  - docker push ctnkyrd/multi-client
+  - docker push ctnkyrd/multi-nginx
+  - docker push ctnkyrd/multi-server
+  - docker push ctnkyrd/multi-worker
